[package]
name = "mlab"
version = "0.1.0"
edition = "2021"
description = "CLI client for the mlab.sh threat intelligence and CVE APIs"
license = "Apache-2.0"
homepage = "https://mlab.sh"
repository = "https://github.com/mlab-sh/mlab-cli"
readme = "README.md"
keywords = ["security", "threat-intelligence", "cve", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "mlab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
colored = "3"
dialoguer = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
